Lab2/Code/syntax.output
Terminals unused in grammar

   digit
   integer
   letter
   SPACE
   TAB
   LINEBREAK


State 34 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec error
    8       | Specifier error CompSt
    9       | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | /* empty */

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | LC DefList error RC
   30       | LC DefList StmtList error

   31 StmtList: Stmt StmtList
   32         | /* empty */

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | Exp error SEMI
   40     | IF error RP Stmt
   41     | IF error RP Stmt ELSE Stmt

   42 DefList: Def DefList
   43        | /* empty */

   44 Def: Specifier DecList SEMI
   45    | Specifier error SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp
   50    | error ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | Exp LB error RB

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 21 24 29 30 39 40 41 45 50 69
digit (258)
integer (259)
letter (260)
SPACE (261)
TAB (262)
LINEBREAK (263)
INT (264) 20 67
FLOAT (265) 68
ID (266) 16 18 19 22 23 24 62 63 65 66
TYPE (267) 12
ASSIGNOP (268) 49 50 51
AND (269) 52
OR (270) 53
RELOP (271) 54
PLUS (272) 55
MINUS (273) 56 60
STAR (274) 57
DIV (275) 58
NOT (276) 61
DOT (277) 65
LP (278) 22 23 24 36 37 38 59 62 63
RP (279) 22 23 24 36 37 38 40 41 59 62 63
LB (280) 20 64 69
RB (281) 20 21 64 69
LC (282) 14 28 29 30
RC (283) 14 28 29
COMMA (284) 11 25 47 70
SEMI (285) 4 5 9 33 35 39 44 45
WHILE (286) 38
IF (287) 36 37 40 41
ELSE (288) 37 41
STRUCT (289) 14 15
RETURN (290) 35
LOWER_THAN_ELSE (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Program (38)
    on left: 1, on right: 0
ExtDefList (39)
    on left: 2 3, on right: 1 2
ExtDef (40)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (41)
    on left: 10 11, on right: 4 11
Specifier (42)
    on left: 12 13, on right: 4 5 6 7 8 27 44 45
StructSpecifier (43)
    on left: 14 15, on right: 13
OptTag (44)
    on left: 16 17, on right: 14
Tag (45)
    on left: 18, on right: 15
VarDec (46)
    on left: 19 20 21, on right: 10 11 20 27 48 49
FunDec (47)
    on left: 22 23 24, on right: 6 7
VarList (48)
    on left: 25 26, on right: 22 25
ParamDec (49)
    on left: 27, on right: 25 26
CompSt (50)
    on left: 28 29 30, on right: 6 8 34
StmtList (51)
    on left: 31 32, on right: 28 30 31
Stmt (52)
    on left: 33 34 35 36 37 38 39 40 41, on right: 31 36 37 38 40 41
DefList (53)
    on left: 42 43, on right: 14 28 29 30 42
Def (54)
    on left: 44 45, on right: 42
DecList (55)
    on left: 46 47, on right: 44 47
Dec (56)
    on left: 48 49 50, on right: 46 47
Exp (57)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69, on right: 33 35 36 37 38 39 49 50 51 52 53 54 55 56 57 58 59
    60 61 64 65 69 70 71
Args (58)
    on left: 70 71, on right: 62 70


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    9 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


state 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec error
    8       | Specifier . error CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


state 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


state 9

    9 ExtDef: error SEMI .

    $default  reduce using rule 9 (ExtDef)


state 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


state 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


state 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


state 13

    0 $accept: Program $end .

    $default  accept


state 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 15

    8 ExtDef: Specifier error . CompSt
   21 VarDec: error . RB

    RB  shift, and go to state 22
    LC  shift, and go to state 23

    CompSt  go to state 24


state 16

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . LP error RP

    LP  shift, and go to state 25

    $default  reduce using rule 19 (VarDec)


state 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


state 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 27
    COMMA  shift, and go to state 28

    $default  reduce using rule 10 (ExtDecList)


state 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . error

    error  shift, and go to state 29
    LC     shift, and go to state 23

    CompSt  go to state 30


state 21

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


state 22

   21 VarDec: error RB .

    $default  reduce using rule 21 (VarDec)


state 23

   28 CompSt: LC . DefList StmtList RC
   29       | LC . DefList error RC
   30       | LC . DefList StmtList error

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 33


state 24

    8 ExtDef: Specifier error CompSt .

    $default  reduce using rule 8 (ExtDef)


state 25

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   24       | ID LP . error RP

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    RP      shift, and go to state 36
    STRUCT  shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 38
    ParamDec         go to state 39


state 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 27

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


state 28

   11 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 41
    ID     shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 19


state 29

    7 ExtDef: Specifier FunDec error .

    $default  reduce using rule 7 (ExtDef)


state 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 31

   44 Def: Specifier . DecList SEMI
   45    | Specifier . error SEMI

    error  shift, and go to state 44
    ID     shift, and go to state 42

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


state 32

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


state 33

   42 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 33


state 34

   28 CompSt: LC DefList . StmtList RC
   29       | LC DefList . error RC
   30       | LC DefList . StmtList error

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 23
    WHILE   shift, and go to state 57
    IF      shift, and go to state 58
    RETURN  shift, and go to state 59

    error  [reduce using rule 32 (StmtList)]
    RC     reduce using rule 32 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 61
    Stmt      go to state 62
    Exp       go to state 63


state 35

   24 FunDec: ID LP error . RP

    RP  shift, and go to state 64


state 36

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


state 37

   27 ParamDec: Specifier . VarDec

    error  shift, and go to state 41
    ID     shift, and go to state 42

    VarDec  go to state 65


state 38

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 66


state 39

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 67

    $default  reduce using rule 26 (VarList)


state 40

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 68


state 41

   21 VarDec: error . RB

    RB  shift, and go to state 22


state 42

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


state 43

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


state 44

   21 VarDec: error . RB
   45 Def: Specifier error . SEMI
   50 Dec: error . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 69
    RB        shift, and go to state 22
    SEMI      shift, and go to state 70


state 45

   20 VarDec: VarDec . LB INT RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 27

    $default  reduce using rule 48 (Dec)


state 46

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 72


state 47

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 46 (DecList)


state 48

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


state 49

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


state 50

   29 CompSt: LC DefList error . RC

    RC  shift, and go to state 74


state 51

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


state 52

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


state 53

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 75

    $default  reduce using rule 66 (Exp)


state 54

   60 Exp: MINUS . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 76


state 55

   61 Exp: NOT . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 77


state 56

   59 Exp: LP . Exp RP

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 78


state 57

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


state 58

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . error RP Stmt
   41     | IF . error RP Stmt ELSE Stmt

    error  shift, and go to state 80
    LP     shift, and go to state 81


state 59

   35 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 82


state 60

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


state 61

   28 CompSt: LC DefList StmtList . RC
   30       | LC DefList StmtList . error

    error  shift, and go to state 83
    RC     shift, and go to state 84


state 62

   31 StmtList: Stmt . StmtList

    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 23
    WHILE   shift, and go to state 57
    IF      shift, and go to state 58
    RETURN  shift, and go to state 59

    $default  reduce using rule 32 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 85
    Stmt      go to state 62
    Exp       go to state 63


state 63

   33 Stmt: Exp . SEMI
   39     | Exp . error SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    error     shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96
    SEMI      shift, and go to state 97


state 64

   24 FunDec: ID LP error RP .

    $default  reduce using rule 24 (FunDec)


state 65

   20 VarDec: VarDec . LB INT RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 27 (ParamDec)


state 66

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


state 67

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 98
    ParamDec         go to state 39


state 68

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


state 69

   50 Dec: error ASSIGNOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 99


state 70

   45 Def: Specifier error SEMI .

    $default  reduce using rule 45 (Def)


state 71

   49 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 100


state 72

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


state 73

   47 DecList: Dec COMMA . DecList

    error  shift, and go to state 101
    ID     shift, and go to state 42

    VarDec   go to state 45
    DecList  go to state 102
    Dec      go to state 47


state 74

   29 CompSt: LC DefList error RC .

    $default  reduce using rule 29 (CompSt)


state 75

   62 Exp: ID LP . Args RP
   63    | ID LP . RP

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    RP     shift, and go to state 103

    Exp   go to state 104
    Args  go to state 105


state 76

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    DOT   shift, and go to state 95
    LB    shift, and go to state 96

    $default  reduce using rule 60 (Exp)


state 77

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    DOT  shift, and go to state 95
    LB   shift, and go to state 96

    $default  reduce using rule 61 (Exp)


state 78

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 106
    LB        shift, and go to state 96


state 79

   38 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 107


state 80

   40 Stmt: IF error . RP Stmt
   41     | IF error . RP Stmt ELSE Stmt

    RP  shift, and go to state 108


state 81

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 109


state 82

   35 Stmt: RETURN Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96
    SEMI      shift, and go to state 110


state 83

   30 CompSt: LC DefList StmtList error .

    $default  reduce using rule 30 (CompSt)


state 84

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


state 85

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


state 86

   39 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 111


state 87

   51 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 112


state 88

   52 Exp: Exp AND . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 113


state 89

   53 Exp: Exp OR . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 114


state 90

   54 Exp: Exp RELOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 115


state 91

   55 Exp: Exp PLUS . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 116


state 92

   56 Exp: Exp MINUS . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 117


state 93

   57 Exp: Exp STAR . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 118


state 94

   58 Exp: Exp DIV . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 119


state 95

   65 Exp: Exp DOT . ID

    ID  shift, and go to state 120


state 96

   64 Exp: Exp LB . Exp RB
   69    | Exp LB . error RB

    error  shift, and go to state 121
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 122


state 97

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


state 98

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


state 99

   50 Dec: error ASSIGNOP Exp .
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 50 (Dec)


state 100

   49 Dec: VarDec ASSIGNOP Exp .
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 49 (Dec)


state 101

   21 VarDec: error . RB
   50 Dec: error . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 69
    RB        shift, and go to state 22


state 102

   47 DecList: Dec COMMA DecList .

    $default  reduce using rule 47 (DecList)


state 103

   63 Exp: ID LP RP .

    $default  reduce using rule 63 (Exp)


state 104

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   70 Args: Exp . COMMA Args
   71     | Exp .

    ASSIGNOP  shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96
    COMMA     shift, and go to state 123

    $default  reduce using rule 71 (Args)


state 105

   62 Exp: ID LP Args . RP

    RP  shift, and go to state 124


state 106

   59 Exp: LP Exp RP .

    $default  reduce using rule 59 (Exp)


state 107

   38 Stmt: WHILE LP Exp . RP Stmt
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 125
    LB        shift, and go to state 96


state 108

   40 Stmt: IF error RP . Stmt
   41     | IF error RP . Stmt ELSE Stmt

    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 23
    WHILE   shift, and go to state 57
    IF      shift, and go to state 58
    RETURN  shift, and go to state 59

    CompSt  go to state 60
    Stmt    go to state 126
    Exp     go to state 63


state 109

   36 Stmt: IF LP Exp . RP Stmt
   37     | IF LP Exp . RP Stmt ELSE Stmt
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 127
    LB        shift, and go to state 96


state 110

   35 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 35 (Stmt)


state 111

   39 Stmt: Exp error SEMI .

    $default  reduce using rule 39 (Stmt)


state 112

   51 Exp: Exp . ASSIGNOP Exp
   51    | Exp ASSIGNOP Exp .
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 51 (Exp)


state 113

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   52    | Exp AND Exp .
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    RELOP  shift, and go to state 90
    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92
    STAR   shift, and go to state 93
    DIV    shift, and go to state 94
    DOT    shift, and go to state 95
    LB     shift, and go to state 96

    $default  reduce using rule 52 (Exp)


state 114
